--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.0",
   "description": "Show current site all UserJS，The easier way to install UserJs for Tampermonkey.",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "standard": "standard --plugin html 'src/**/*.{js,vue}'"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
+    "eslint-plugin-html": "^3.2.0",
+    "standard": "^10.0.3",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
@@ -38,5 +41,10 @@
     "timeago.js": "^3.0.2",
     "vue": "^2.4.2",
     "vue-i18n": "^7.2.0"
+  },
+  "standard": {
+    "ignore": [
+      "user.js"
+    ]
   }
 }
