--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Show current site all UserJS，The easier way to install UserJs for Tampermonkey.",
   "scripts": {
     "build": "webpack",
-    "standard": "standard --plugin html 'src/**/*.{js,vue}'"
+    "standard": "standard --plugin html 'src/**/*.{js,vue}' --fix"
   },
   "repository": {
     "type": "git",
