--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "iview": "^2.2.0",
     "timeago.js": "^3.0.2",
     "vue": "^2.4.2",
-    "vue-i18n": "^7.2.0"
+    "vue-i18n": "7.2.0"
   },
   "standard": {
     "ignore": [
