--- a/crx/extension/manifest.json
+++ b/crx/extension/manifest.json
@@ -1,9 +1,10 @@
 {
     "manifest_version": 2,
   
-    "name": "Userscript+",
+    "name": "Userscript+ for Tampermonkey",
     "description": "Show current site all UserJS，The easier way to install UserJs for Tampermonkey.",
     "version": "1.0",
+    "author": "Jaeger <JaegerCode@gmail.com>",
   
     "browser_action": {
       "default_icon": {
@@ -11,8 +12,7 @@
          "32": "images/icon_32.png",
          "96": "images/icon_96.png"
       },
-      "default_popup": "popup.html",
-      "default_title": "Click here!"
+      "default_popup": "popup.html"
     },
 
     "background": {
@@ -21,8 +21,6 @@
     },
 
     "permissions": [
-      "tabs",
-      "activeTab",
-      "storage"
+      "tabs"
     ]
   }
