--- a/crx/package.json
+++ b/crx/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "fuzzy.js": "^0.1.0",
     "iview": "^2.2.0",
     "timeago.js": "^3.0.2",
     "vue": "^2.4.2",
