--- a/crx/extension/manifest.json
+++ b/crx/extension/manifest.json
@@ -3,8 +3,9 @@
   
     "name": "Userscript+ for Tampermonkey",
     "description": "Show current site all UserJS，The easier way to install UserJs for Tampermonkey.",
-    "version": "1.2",
+    "version": "1.3",
     "author": "Jaeger <JaegerCode@gmail.com>",
+    "homepage_url": "https://github.com/jae-jae/Userscript-Plus",
     "icons": {
       "16": "images/icon_16.png",
       "32": "images/icon_32.png",
