--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: node_js
 node_js: 9
 before_script:
   - npm install yarn webpack -g
-  - yarn
   - cd crx
+  - yarn
+  - cd ..
   - yarn
 script:
   - yarn build
@@ -13,3 +14,5 @@ cache:
   directories:
     - "node_modules"
     - "crx/node_modules"
+  - yarn: true
+  - webpack: true
