--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Show current site all UserJS，The easier way to install UserJs for Tampermonkey.",
   "scripts": {
     "build": "webpack --config=build/webpack.config.js && webpack --config=build/webpack.gf.config.js  && node build/userscript.js",
-    "watch:ui": "webpack --watch",
+    "watch:ui": "webpack --watch --config=build/webpack.config.js",
     "standard": "standard --plugin html 'src/**/*.{js,vue}' --fix"
   },
   "repository": {
