--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "animate.css": "^3.5.2",
     "fuzzy.js": "^0.1.0",
     "iview": "^2.2.0",
+    "psl": "^1.1.31",
     "timeago.js": "^3.0.2",
     "vue": "^2.4.2",
     "vue-i18n": "7.2.0"
